# SAT-SMT-solvers

./: .gitignore  README.md  hw2.tex  hw3.tex
CDCL/: Makefile  dimacs.l  formula2cnf.cpp  main.cpp  satlib.hpp  satlib.l
CDCL/include/: cnf_parser.hpp  dimacs.hpp  satlib.hpp
CPP/: .gitignore  Makefile  README.md  adjacency.hpp  dimacs.l  formula2cnf.cpp  learning.cpp  links.txt  main.cpp  mine.awk  script.R  shared.hpp  test.sh  watched.hpp
CPP/include/: adjacency.hpp  cnf_parser.hpp  dimacs.hpp  satlib.hpp  shared.hpp  watched.hpp  watched_cdcl.hpp  watched_sep.hpp  watched_sep_cdcl.hpp
Clause/: Clause.cabal
DIMACS/: DIMACS.cabal  DIMACS.hs  hie.yaml
DPLL/: CHANGELOG.md  DPLL.cabal  Main.hs  hie.yaml
Formula2CNF/: CHANGELOG.md  Formula2CNF.cabal  Main.hs  hie.yaml
Haskell/: cabal.project
Haskell/Clause/: Clause.hs  hie.yaml
Haskell/DIMACS/: CHANGELOG.md
Haskell/DPLL/: DPLL.cabal  Main.hs
Haskell/Formula2CNF/: Formula2CNF.cabal  Main.hs
Haskell/Tseitin/: Tseitin.cabal
Tseitin/: CHANGELOG.md  Main.lhs  Makefile  Tseitin.cabal  Tseitin.hs  Tseitin.ptb  Tseitin.tex  hie.yaml
lecture-hw/: graph.gv  hw1.tex  hw10.tex  hw2.tex  hw3.tex  hw4.tex  hw5.tex  hw6.tex  hw7.tex  hw8.tex  hw9.tex
sat-use/: set_path.sh
sat-use/backbones/: .gitignore  Makefile  README.md  cadibones.cpp  glucobones.cpp  lglbones.cpp  links.txt  main.hpp  minibones.cpp  script.R  test.sh
sat-use/cryptarithms/: README.md  main.cpp
sat-use/cryptarithms-smt2/: .gitignore  README.md  main.cpp
sat-use/task_n_queens/: .gitignore  Makefile  README.md  gen_queens.cpp  glucose.out.txt  lingeling.out.txt  minisat.out.txt  run.sh  script.R
sat-use/testing_equivalence/: .gitignore  Makefile  README.md  equivalent.sh  main.cpp  script.R  test.bash
sat-use/testing_equivalence/simple_test/: general.cnf  special.cnf
