cabal-version:       2.4

name:                Clause
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             NONE
license-file:        LICENSE
author:              Jiří Klepl
maintainer:          jiriklepl@seznam.cz
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:    Clause
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13.0.0,
                       containers ^>=0.6.2.1,
  -- hs-source-dirs:
  default-language:    Haskell2010
