cabal-version:       2.4

name:                DIMACS
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             NONE
license-file:        LICENSE
author:              Jiří Klepl
maintainer:          jiriklepl@seznam.cz
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:    DIMACS
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13.0.0,
                       megaparsec ^>=9.0.1,
                       text ^>=1.2.4.0,
                       mtl ^>=2.2.2,
                       containers ^>=0.6.2.1,

                       Clause,
  -- hs-source-dirs:
  default-language:    Haskell2010
