cabal-version:       2.4

name:                DPLL
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             NONE
license-file:        LICENSE
author:              Jiří Klepl
maintainer:          jiriklepl@seznam.cz
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable dpll
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0,
                       text ^>=1.2.4.0,
                       containers ^>=0.6.2.1,
                       mtl ^>=2.2.2,
                       time ^>=1.11.1.1,

                       Tseitin,
                       DIMACS,
                       Clause,
  -- hs-source-dirs:
  default-language:    Haskell2010
